--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,53 +22,103 @@
     </android.support.v7.widget.Toolbar>
 
 
-    <ImageView
-        android:layout_width="101dp"
-        android:layout_height="129dp"
-        android:id="@+id/imageView"
-        android:src="@drawable/logotransparent"
-        android:layout_gravity="center_horizontal" />
-
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_gravity="right"
+        android:gravity="center"
         android:layout_height="wrap_content"
-        android:text=""
-        android:id="@+id/timer"
-        android:layout_gravity="center_horizontal" />
+        android:layout_marginBottom="0dp"
+        android:weightSum="1">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Currently detecting: "
-        android:id="@+id/searchWord"
-        android:layout_gravity="center_horizontal" />
+        <TextView
+            android:layout_width="121dp"
+            android:layout_height="match_parent"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Time Remaining:"
+            android:id="@+id/timeCaption"
+            android:gravity="right"
+            android:layout_marginTop="6dp"
+            android:layout_marginRight="0dp"
+            android:lineSpacingMultiplier="0.8"
+            android:layout_marginBottom="0dp"
+            android:textSize="27dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Notification status: "
-        android:id="@+id/notificationStatus"
-        android:layout_gravity="center_horizontal" />
+        <TextView
+            android:layout_width="132dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/timer"
+            android:textSize="60dp"
+            android:gravity="left"
+            android:layout_marginLeft="0dp"
+            android:layout_gravity="right"
+            android:layout_marginBottom="0dp"
+            android:layout_weight="0.13" />
+    </LinearLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
+    <ProgressBar
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Notification type: "
-        android:id="@+id/notificationType"
-        android:layout_gravity="center_horizontal" />
+        android:layout_marginTop="0dp"
+        android:id="@+id/progressBar" />
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Total count: 0"
-        android:id="@+id/totalCount"
-        android:layout_gravity="center_horizontal" />
+        android:gravity="center"
+        android:paddingTop="15dp"
+        android:layout_gravity="center_horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Currently detecting: "
+            android:id="@+id/curDetectCaption" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="word"
+            android:textSize="20dp"
+            android:id="@+id/searchWord" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Notification status: "
+            android:paddingTop="10dp"
+            android:id="@+id/notStatusCaption" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="status"
+            android:textSize="20dp"
+            android:id="@+id/notificationStatus" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Notification type: "
+            android:paddingTop="10dp"
+            android:id="@+id/notTypeCaption" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="type"
+            android:textSize="20dp"
+            android:id="@+id/notificationType" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/caption"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:gravity="center"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:typeface="sans" />
 
@@ -77,16 +127,41 @@
         android:layout_height="wrap_content"
         android:text=""
         android:id="@+id/counts"
-        android:layout_weight="0.92"
-        android:textSize="25sp"
+        android:layout_weight="0.77"
+        android:textSize="15sp"
+        android:gravity="center"
         android:layout_gravity="center_horizontal" />
 
     <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:weightSum="1">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="25dp"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Total Count:"
+            android:id="@+id/countCaption" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0"
+            android:id="@+id/totalCount"
+            android:textSize="40dp"
+            android:layout_weight="0.06" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:weightSum="1"
+        android:layout_weight="0.08">
 
         <Button
             style="?android:attr/buttonStyleSmall"
